fix : increase button active transition effect and alignment of the button

--- a/styles.css
+++ b/styles.css
@@ -94,8 +94,12 @@ body {
 }
 
 .button-container {
+    transition: 700ms;
     -webkit-tap-highlight-color: transparent; 
-    outline: none; 
+    outline: none;
+    margin-bottom: -60px;
+   width: 3.3rem;
+    height: 3rem;
 }
 
 
